--- a/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
+++ b/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
@@ -276,12 +276,12 @@ under: |
 #code: |
 #  signature_fields = ['users[0].signature']
 ---
-code: |
+#code: |
   # This is a placeholder for the addresses that will be searched
   # for matching address to court. Edit if court venue is based on 
   # a different address than the user's
-  [user.address.address for user in users.complete_elements()]
-  addresses_to_search = [user.address for user in users.complete_elements()]
+#  [user.address.address for user in users.complete_elements()]
+#  addresses_to_search = [user.address for user in users.complete_elements()]
 ---
 id: feewaiverapp review screen
 event: review_feewaiverapp
