Successfully turned on preview feature - did not solve problem. But also did not cause any problems - leaving it in for time being.

--- a/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
+++ b/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
@@ -94,6 +94,7 @@ code: |
   users[0].address.address
   user_email
   set_progress(64)
+  feewaiverapp_preview_question
   user_signature
   interview_order_feewaiverapp = True
 ---
