--- a/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
+++ b/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
@@ -2,6 +2,7 @@
 include:
   - docassemble.AssemblyLine:assembly_line.yml
   - ptla_custom_organization.yml
+  - mainefinancialaffidavit.yml
 ---
 metadata:
   title: |
@@ -96,6 +97,7 @@ code: |
   set_progress(64)
   feewaiverapp_preview_question
   user_signature
+  financial_affidavit_done
   interview_order_feewaiverapp = True
 ---
 ###################### Main order ######################
@@ -488,9 +490,9 @@ objects:
   - feewaiverapp_attachment: ALDocument.using(title="Maine Fee Waiver Application", filename="feewaiverapp", enabled=True, has_addendum=False, )
 ---
 # Bundles group the ALDocuments into separate downloads, such as for court and for the user
-objects:
-  - al_user_bundle: ALDocumentBundle.using(elements=[feewaiverapp_Post_interview_instructions, feewaiverapp_attachment], filename="feewaiverapp", title="All forms to download for your records", enabled=True)
-  - al_court_bundle: ALDocumentBundle.using(elements=[feewaiverapp_attachment],  filename="feewaiverapp", title="All forms to deliver to court", enabled=True)
+#objects:
+#  - al_user_bundle: ALDocumentBundle.using(elements=[feewaiverapp_Post_interview_instructions, feewaiverapp_attachment], filename="feewaiverapp", title="All forms to download for your records", enabled=True)
+#  - al_court_bundle: ALDocumentBundle.using(elements=[feewaiverapp_attachment],  filename="feewaiverapp", title="All forms to deliver to court", enabled=True)
 ---
 # Each attachment defines a key in an ALDocument. We use `i` as the placeholder here so the same template is 
 # used for "preview" and "final" keys, and logic in the template checks the value of 
@@ -533,5 +535,156 @@ attachment:
       - "user_address_line_two": ${ users[0].address.line_two() }
       - "user_phone_number": ${ user_phone_number }
       - "user_email": ${ user_email }
-
+---
+# ALDocument objects specify the metadata for each template
+objects:
+  - mainefinancialaffidavit_Post_interview_instructions: ALDocument.using(title="Instructions", filename="mainefinancialaffidavit_next_steps.docx", enabled=True, has_addendum=False)
+  - mainefinancialaffidavit_attachment: ALDocument.using(title="Maine Financial Affidavit", filename="mainefinancialaffidavit", enabled=True, has_addendum=False, )
+---
+# Bundles group the ALDocuments into separate downloads, such as for court and for the user
+objects:
+  - al_user_bundle: ALDocumentBundle.using(elements=[mainefinancialaffidavit_Post_interview_instructions, mainefinancialaffidavit_attachment, feewaiverapp_attachment], filename="feewaiverbundle", title="All forms to download for your records", enabled=True)
+  - al_court_bundle: ALDocumentBundle.using(elements=[mainefinancialaffidavit_attachment, feewaiverapp_attachment],  filename="feewaiverbundle", title="All forms to deliver to court", enabled=True)
+#  - al_user_bundle_two: ALDocumentBundle.using(elements=[feewaiverapp_Post_interview_instructions, feewaiverapp_attachment], filename="feewaiverapp", title="All forms to download for your records", enabled=True)
+#  - al_court_bundle_two: ALDocumentBundle.using(elements=[feewaiverapp_attachment],  filename="feewaiverapp", title="All forms to deliver to court", enabled=True)
+---
+# Each attachment defines a key in an ALDocument. We use `i` as the placeholder here so the same template is 
+# used for "preview" and "final" keys, and logic in the template checks the value of 
+# `i` to show or hide the user's signature
+attachment:
+  name: Post-interview-Instructions
+  filename: mainefinancialaffidavit_next_steps
+  docx template file: mainefinancialaffidavit_next_steps.docx
+  variable name: mainefinancialaffidavit_Post_interview_instructions[i]
+  skip undefined: True
+---
+attachment:
+  name: mainefinancialaffidavit
+  filename: mainefinancialaffidavit
+  variable name: mainefinancialaffidavit_attachment[i]
+  skip undefined: True
+  pdf template file: mainefinancialaffidavit.pdf
+  fields:
+      - "plaintiffs_name": ${ plaintiffs[0] }
+      - "plaintiffs1_name": ${ plaintiffs[1] }
+      - "court_county": ${ court_county }
+      - "court_town": ${ court_town }
+      - "court_superior": ${ court_type == "superior" }
+      - "court_district": ${ court_type == "district" }
+      - "court_criminal": ${ court_type == "criminal" }
+      - "docket_number": ${ docket_number }
+      - "defendants_name": ${ defendants[0] }
+      - "defendants1_name": ${ defendants[1] }
+      - "user_name": ${ users[0] }
+      - "support_fee_waiver": ${ support_fee_waiver }
+      - "support_other_text": ${ support_other_text }
+      - "support_other": ${ support_fee_waiver == False }
+      - "user_address_on_one_line": ${ users[0].address.on_one_line() }
+      - "users_birthdate": ${ users[0].birthdate.format() }
+      - "user_phone_number": ${ users[0].phone_number }
+      - "user_mobile_number": ${ users[0].mobile_number }
+      - "user_work_number": ${ "{:,.2f}".format(user_work_number) }
+      - "user_email": ${ users[0].email }
+      - "employer_name": ${ employer_name }
+      - "user_is_employed": ${ user_is_employed }
+      - "employer_address_on_one_line": ${ employer_address_on_one_line }
+      - "user_gross_pay": ${ currency(user_gross_pay) }
+      - "user_pay_salary": ${ user_pay_salary }
+      - "user_salary_paid_weekly": ${ pay_period_salary == "user_salary_paid_weekly" }
+      - "user_salary_paid_biweekly": ${ pay_period_salary == "user_salary_paid_biweekly" }
+      - "user_salary_paid_monthly": ${ pay_period_salary == "user_salary_paid_monthly" }
+      - "user_salary_paid_other_term": ${ user_salary_paid_other_term }
+      - "user_salary_paid_other": ${ pay_period_salary == "user_salary_paid_other" }
+      - "user_hourly_wage": ${ user_hourly_wage }
+      - "user_hours_worked": ${ user_hours_worked }
+      - "user_pay_wages": ${ user_pay_wages }
+      - "user_hours_worked_weekly": ${ pay_period_wage == "user_hours_worked_weekly" }
+      - "user_hours_worked_biweekly": ${ pay_period_wage == "user_hours_worked_biweekly" }
+      - "user_hours_worked_monthly": ${ pay_period_wage == "user_hours_worked_monthly" }
+      - "user_hours_worked_other_term": ${ user_hours_worked_other_term }
+      - "user_hours_worked_other": ${ pay_period_wage == "user_hours_worked_other" }
+      - "user_gets_benefits": ${ user_gets_benefits }
+      - "benefits_unemployment": ${ user_benefits_selection["benefits_unemployment"] == True }
+      - "benefits_social_security": ${ user_benefits_selection["benefits_social_security"] == True }
+      - "benefits_tanf": ${ user_benefits_selection["benefits_tanf"] == True }
+      - "benefits_spousal_child_support": ${ user_benefits_selection["benefits_spousal_child_support"] == True }
+      - "benefits_other": ${ user_benefits_selection["benefits_other"] == True }
+      - "benefits_other_text": ${ benefits_other_text }
+      - "benefits_total_value": ${ currency(benefits_total_value) }
+      - "benefits_time_weekly": ${ user_benefits_schedule == "benefits_time_weekly" }
+      - "benefits_time_biweekly": ${ user_benefits_schedule == "benefits_time_biweekly" }
+      - "benefits_time_monthly": ${ user_benefits_schedule == "benefits_time_monthly" }
+      - "benefits_time_other": ${ user_benefits_schedule == "benefits_time_other" }
+      - "benefits_time_other_term": ${ benefits_time_other_term }
+      - "asset_cash_bail": ${ asset_cash_bail }
+      - "asset_cash_bail_amount": ${ currency(asset_cash_bail_amount) }
+      - "asset_cash_on_hand_amount": ${ currency(asset_cash_on_hand_amount) }
+      - "asset_cash_in_bank_amount": ${ currency(asset_cash_in_bank_amount) }
+      - "asset_owed_money_amount": ${ currency(asset_owed_money_amount) }
+      - "asset_cash_on_hand": ${ asset_cash_on_hand }
+      - "asset_cash_in_bank": ${ asset_cash_in_bank }
+      - "asset_owed_money": ${ asset_owed_money }
+      - "asset_user_owns_house": ${ asset_user_owns_house }
+      - "asset_user_owns_house_value": ${ currency(asset_user_owns_house_value) }
+      - "asset_user_owns_house_amount_owed": ${ currency(asset_user_owns_house_amount_owed) }
+      - "asset_user_owns_vehicle_value": ${ currency(asset_user_owns_vehicle_value) }
+      - "asset_user_owns_stocks_value": ${ currency(asset_user_owns_stocks_value) }
+      - "asset_user_owns_vehicle": ${ asset_user_owns_vehicle }
+      - "asset_user_owns_stocks": ${ asset_user_owns_stocks }
+      - "asset_user_owns_recreational_vehicle": ${ asset_user_owns_recreational_vehicle }
+      - "asset_user_owns_recreational_vehicle_value": ${ currency(asset_user_owns_recreational_vehicle_value) }
+      - "asset_user_owns_other_text": ${ asset_user_owns_other_text }
+      - "asset_user_owns_other_value": ${ currency(asset_user_owns_other_value) }
+      - "asset_user_owns_other": ${ asset_user_owns_other }
+      - "expense_mortgage": ${ expense_mortgage }
+      - "expense_child_support": ${ expense_child_support }
+      - "expense_utilities": ${ expense_utilities }
+      - "expense_mortgage_amount": ${ currency(expense_mortgage_amount) }
+      - "expense_child_support_amount": ${ currency(expense_child_support_amount) }
+      - "expense_utilities_amount": ${ currency(expense_utilities_amount) }
+      - "expense_food": ${ expense_food }
+      - "expense_cable": ${ expense_cable }
+      - "expense_credit_card": ${ expense_credit_card }
+      - "expense_food_amount": ${ currency(expense_food_amount) }
+      - "expense_cable_amount": ${ currency(expense_cable_amount) }
+      - "expense_credit_card_amount": ${ currency(expense_credit_card_amount) }
+      - "expense_loans": ${ expense_loans }
+      - "expense_heat": ${ expense_heat }
+      - "expense_rent": ${ expense_rent }
+      - "expense_loans_amount": ${ currency(expense_loans_amount) }
+      - "expense_heat_amount": ${ currency(expense_heat_amount) }
+      - "expense_rent_amount": ${ currency(expense_rent_amount) }
+      - "expense_cell_phone": ${ expense_cell_phone }
+      - "expense_other": ${ expense_other }
+      - "expense_cell_phone_amount": ${ currency(expense_cell_phone_amount) }
+      - "expense_other_text": ${ expense_other_text }
+      - "expense_other_amount": ${ currency(expense_other_amount) }
+      - "number_children_live_with_user": ${ number_children_live_with_user }
+      - "children_live_with_user": ${ children_live_with_user }
+      - "user_pays_child_support_for_number_of_children": ${ user_pays_child_support_for_number_of_children }
+      - "user_pays_child_support_amount": ${ currency(user_pays_child_support_amount) }
+      - "user_pays_child_support": ${ expense_child_support }
+      - "child_support_paid_other_schedule_term": ${ child_support_paid_other_schedule_term }
+      - "child_support_paid_weekly": ${ child_support_schedule == "child_support_paid_weekly" }
+      - "child_support_paid_biweekly": ${ child_support_schedule == "child_support_paid_biweekly" }
+      - "child_support_paid_monthly": ${ child_support_schedule == "child_support_paid_monthly" }
+      - "child_support_paid_other_schedule": ${ child_support_schedule == "child_support_paid_other_schedule" }
+      - "user_lives_alone": ${ user_lives_alone }
+      - "user_lives_with_someone": ${ user_lives_alone == False or user_household_children_plus_adults == True }
+      - "user_lives_with_spouse": ${ user_housemate_selection["user_lives_with_spouse"] == True }
+      - "user_lives_with_friend": ${ user_housemate_selection["user_lives_with_friend"] == True }
+      - "user_lives_with_parent": ${ user_housemate_selection["user_lives_with_parent"] == True }
+      - "user_lives_with_other": ${ user_housemate_selection["user_lives_with_other"] }
+      - "user_lives_with_other_text": ${ user_lives_with_other_text }
+      - "shared_living_expenses_amount": ${ currency(shared_living_expenses_amount) }
+      - "user_shares_living_expenses": ${ user_shares_living_expenses }
+      - "shared_living_expenses_other_term": ${ shared_living_expenses_other_term }
+      - "shared_living_expenses_weekly": ${ shared_living_expenses_schedule == "shared_living_expenses_weekly" }
+      - "shared_living_expenses_biweekly": ${ shared_living_expenses_schedule == "shared_living_expenses_biweekly" }
+      - "shared_living_expenses_monthly": ${ shared_living_expenses_schedule == "shared_living_expenses_monthly" }
+      - "shared_living_expenses_other": ${ shared_living_expenses_schedule == "shared_living_expenses_other" }
+      - "acknowledge_form_terms": ${ acknowledge_form_terms }
+      - "truthfulness_check": ${ truthfulness_check }
+      - "signature_date": ${ signature_date }
+---
 
