--- a/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
+++ b/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
@@ -93,7 +93,7 @@ code: |
   signature_date
   set_progress(48)
   users[0].address.address
-  user_email
+  #user_email
   set_progress(64)
   feewaiverapp_preview_question
   user_signature
@@ -533,8 +533,8 @@ attachment:
       - "signature_date": ${ signature_date }
       - "user_address_line_one": ${ users[0].address.line_one() }
       - "user_address_line_two": ${ users[0].address.line_two() }
-      - "user_phone_number": ${ user_phone_number }
-      - "user_email": ${ user_email }
+      - "user_phone_number": ${ users[0].mobile_number }
+      - "user_email": ${ users[0].email }
 ---
 # ALDocument objects specify the metadata for each template
 objects:
