Building out content in financial affidavit, testing commit issue

--- a/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
+++ b/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
@@ -134,7 +134,9 @@ question: |
 subquestion: |
   You can use this Maine Fee Waiver Form Interview to ask the court to waive fees like the filing fee, mediation fee, or other court costs if you cannot afford to pay them. 
   
-  This tool will walk you through filling out Maine Form CV-067 'Application to Proceed Without Payment of Fees' (often called a 'fee waiver') and Maine Form CV-191 'Financial Affidavit.' These are the two forms you will need to ask the court for a fee waiver.
+  This tool will walk you through filling out Maine Form CV-067 'Application to Proceed Without Payment of Fees' (often called a 'fee waiver') and Maine Form CV-191 'Financial Affidavit.' These are the two forms you will need to ask the court for a fee waiver. 
+  
+  There will be instructions at the end about what to do next with these forms!
 ---
 id: Introduction
 question: |
