Working code for auto-setting fee waiver support question to True

--- a/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
+++ b/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
@@ -608,7 +608,7 @@ attachment:
       - "defendants_name": ${ defendants[0] }
       - "defendants1_name": ${ defendants[1] }
       - "user_name": ${ users[0] }
-      - "support_fee_waiver": ${ support_fee_waiver = True }
+      - "support_fee_waiver": ${ support_fee_waiver }
       #- "support_other_text": ${ support_other_text }
       #- "support_other": ${ support_fee_waiver }
       - "user_address_on_one_line": ${ users[0].address.on_one_line() }
