--- a/docassemble/Feewaiverapp/data/questions/custom_ptla_theme_ngb.yml
+++ b/docassemble/Feewaiverapp/data/questions/custom_ptla_theme_ngb.yml
@@ -72,8 +72,8 @@ comment: |
   features:
     bootstrap theme: my_theme.css
 ---
-features:
-  bootstrap theme: bootstrap.min_2.css
+#features:
+  #bootstrap theme: bootstrap.min_2.css
 ---
 ########################### GitHub Feedback ##############################
 ---
@@ -90,22 +90,21 @@ question: |
   ${interview_short_title}: Pine Tree Legal Forms Online
 subquestion: |
   % if form_approved_for_email_filing:
-  This website can help you complete and file court forms in 3 steps:
+   <br /> This website can help you complete and file court forms in 3 steps:
   % else:
   This website can help you complete and download forms in 3 steps:
   % endif
   
-  Step 1. Answer questions that will fill in your form for you.  
-  Step 2. Preview the completed form.  
+  Step 1. Answer questions that will fill in your form for you.   
+  Step 2. Preview the completed form.   
   % if form_approved_for_email_filing:  
-  Step 3. Email the form to the court using this secure website and save copies
-  for yourself for later reference.  
+  Step 3. Email the form to the court using this secure website and save copies for yourself for later reference.   
   % elif al_form_type in ['starts_case','existing_case','appeal']:
   Step 3. Download and print the final form. You will need to deliver it
-  to the court on your own.
+  to the court on your own. 
   % else:
   Step 3. Download and print the final form. You will need to deliver it 
-  on your own.
+  on your own. 
   % endif
   
   This site is not a lawyer. If you need legal help and your legal issue is in Maine, you can [contact Pine Tree Legal Assistance](https://ptla.org/contact-us) If you or your legal problem are outside of the state of Maine, find [your local
