--- a/docassemble/Feewaiverapp/data/questions/mainefinancialaffidavit.yml
+++ b/docassemble/Feewaiverapp/data/questions/mainefinancialaffidavit.yml
@@ -119,8 +119,11 @@ code: |
     benefits_total_value
   set_progress(48)
   asset_cash_on_hand
+  asset_cash_bail
   asset_user_owns_house
   expense_mortgage
+  expense_food
+  expense_credit_card
   if expense_child_support == True:
     user_pays_child_support_for_number_of_children
   user_lives_alone
@@ -349,6 +352,11 @@ fields:
     show if: asset_owed_money
     datatype: currency
     min: 0
+---
+id: cash bail
+question: |
+  Assets - Cash Bail
+fields:
   - "Have you paid any cash bail for yourself in a criminal case that is still ongoing?": asset_cash_bail
     datatype: yesnoradio
   - "How much cash bail did you pay?": asset_cash_bail_amount
@@ -435,30 +443,43 @@ fields:
     show if: expense_utilities
     datatype: currency
     min: 0
-  - "Food costs?": expense_food
+  - "Do you pay heating costs?": expense_heat
+    datatype: yesnoradio
+  - "Monthly heating costs": expense_heat_amount
+    show if: expense_heat
+    datatype: currency
+    min: 0
+    note: |
+      If your heating costs change month-to-month take an average and use that amount.
+ #Note to Jack: Is this the correct way to handle this? Ask. 
+---
+id: Food and other expenses
+question: |
+  Food and other expenses
+fields:  
+  - "Do you have food costs?": expense_food
     datatype: yesnoradio
   - "Monthly food costs": expense_food_amount
     show if: expense_food
     datatype: currency
     min: 0
-  - "Heating costs?": expense_heat
+  - "Do you have cell phone costs?": expense_cell_phone
     datatype: yesnoradio
-  - "Monthly heating costs": expense_heat_amount
-    show if: expense_heat
+  - "Monthly cell phone costs": expense_cell_phone_amount
+    show if: expense_cell_phone
     datatype: currency
-    min: 0 
-  - "Cable costs?": expense_cable
+    min: 0  
+  - "Do you have cable costs?": expense_cable
     datatype: yesnoradio
+#Note to Jack: Should we be asking about/subbing in internet costs here, instead? The form itself is very out of touch with the reality of most people...
   - "Monthly cable costs": expense_cable_amount
     show if: expense_cable
     datatype: currency
     min: 0    
 ---
-id: Expenses - Other
+id: Expenses - Child Support
 question: |
-  Other Expenses
-subquestion: |
-  More about regular costs you have to you
+  About any child support you pay
 fields:
   - "Do you pay child support?": expense_child_support
     datatype: yesnoradio
@@ -469,25 +490,24 @@ fields:
     help: |  
       Please enter the total amount of child support you pay each month, for all children combined. We will ask for more details later in this interview.
 #The way to more eleganty handle this child support question may be to have the 'Do you pay' question trigger the  child support details screen - and then calculate the monthly child support amount for the 'expense_child_support_amount' field - that way we only have to ask the user for how much and how often they pay, and not to have to try to reconcile the monthly/by period math all on their own. 
-  - "Credit card payments?": expense_credit_card
+---
+id: Other expenses and payment
+question: |
+  About other expenses and payments you make
+fields:
+  - "Do you have monthly credit card payments?": expense_credit_card
     datatype: yesnoradio
-  - "Monthly credit card payments": expense_credit_card_amount
+  - "Monthly credit card payment(s) amount": expense_credit_card_amount
     show if: expense_credit_card
     datatype: currency
     min: 0
-  - "Loan payments?": expense_loans
+  - "Do you have monthly loan payments?": expense_loans
     datatype: yesnoradio
-  - "Monthly loan payments": expense_loans_amount
+  - "Monthly loan payment(s) amount": expense_loans_amount
     show if: expense_loans
     datatype: currency
     min: 0    
-  - "Cell phone costs?": expense_cell_phone
-    datatype: yesnoradio
-  - "Monthly cell phone costs": expense_cell_phone_amount
-    show if: expense_cell_phone
-    datatype: currency
-    min: 0
-  - "Other expenses?": expense_other
+  - "Do you have other monthly expenses?": expense_other
     datatype: yesnoradio
   - "What other expenses do you have?": expense_other_text
     show if: expense_other
