--- a/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
+++ b/docassemble/Feewaiverapp/data/questions/feewaiverapp.yml
@@ -75,6 +75,72 @@ objects:
 sections:
   - review_feewaiverapp: Review your answers
 ---
+template: PTLA_terms_of_use
+subject: Terms of Use and Privacy Policy
+content: |
+  # Pine Tree Legal Assistance's Terms of Use and Privacy Policy
+
+  This website is free to use.
+  Pine Tree Legal Assistance hosts this site.
+
+  ### You need to know
+
+  * This website does not provide legal advice. If you need legal advice, contact a lawyer.
+  * The information and documents on this website have no warranty. We provide the information “as-is.” By using the site, you agree not to hold Pine Tree Legal Assistance or the information providers on this site liable.
+  * We work hard to keep the information on the site up to date. Lawyers drafted and reviewed the documents this site uses. But laws and local rules change over time. These changes can make a document unenforceable when you use it.
+  * We do our best to keep the site working! To do that, we allow you to submit feedback so we can track problems on the site. But we cannot provide individual technical support. 
+
+  ### To use this site
+
+  * You need to be over 13 to use this site. 
+  * This site is for anyone 13 and over. For example: you can be the person who needs the help, a lawyer, or a social worker.
+  * You may not sell the information or the contents of this site. But you can charge for your own time. 
+  * Please keep your use fair. Do not use this site in a way that is illegal or that makes it harder for other people to use.
+
+  ### Information we and others collect
+
+  * We collect the information that you type to help you complete your forms. We delete all information 180 days after you last update it. You can also delete information immediately.
+  * We log information including IP addresses and web browsers from all visitors. We use this information to keep our site secure. We keep logs for up to 180 days.
+  * We use Google Analytics to learn how people use our website. This helps us understand which pages are hardest to use. Google may use this information to show you better advertisements.
+  * We use email and text message delivery services that may keep their own records of any messages you send. If you choose to log in with your phone number, this may include a record of the times you log in to the site.
+
+  ### We keep your information safe
+
+  * We use the same technology that banks and online stores use to keep your information safe. 
+  * We use:
+    * 256 bit encryption
+    * Continual monitoring
+    * Limited access controls
+    * Regular security updates
+    * Software firewalls
+
+  ### Sharing your information
+
+  * We never sell your information.
+  * We share anonymous information with a small number of nonprofits and researchers. We use the information to improve our site and to improve free legal help in Maine.
+  * When you visit some pages of the site, the site may ask if you want to apply to get a free lawyer from legal aid. You get to decide if you want to share your personal information.
+  * You may choose to email completed forms or share a link to your in-progress work at any time to any person.
+
+  ### These terms of use can change
+
+  * We may change these Terms of Use at any time with no notice. Please review the terms on a regular basis to see any changes.
+  * If you use the site after we make changes, you accept our changed Terms of Use.
+
+  The laws of Maine apply to these Terms of Use.
+
+  If a judge decides that one of the terms in this Terms of Use is unenforceable, it will not change the terms that remain.
+
+  ### If you still have questions
+
+  If you would like to access, correct, amend, or delete any personal information we have about you or have any other questions, contact us at: 
+
+  Pine Tree Legal Assistance
+
+  88 Federal Street
+  Portland, ME 04101
+
+  webadmin@ptla.org
+---
 #################### Interview order #####################
 comment: |
   Controls order and branching logic for questions specific to this form
@@ -133,6 +199,50 @@ code: |
       },
   )
   feewaiverapp_download
+---
+id: basic questions intro screen
+#decoration: form-lineal
+question: |
+  ${interview_short_title}: Pine Tree Legal Forms Project
+subquestion: |
+  % if form_approved_for_email_filing:
+   <br /> This website can help you complete and file court forms in 3 steps:
+  % else:
+  This website can help you complete and download forms in 3 steps:
+  % endif
+  
+  Step 1. Answer questions that will fill in your form for you.   
+  Step 2. Preview the completed form.   
+  % if form_approved_for_email_filing:  
+  Step 3. Email the form to the court using this secure website and save copies for yourself for later reference.   
+  % elif al_form_type in ['starts_case','existing_case','appeal']:
+  Step 3. Download and print the final form. You will need to deliver it
+  to the court on your own. 
+  % else:
+  Step 3. Download and print the final form. You will need to sign the Financial Affidavit and have it notarized, and deliver it 
+  on your own. 
+  % endif
+  
+  This site is not a lawyer. If you need legal help and your legal issue is in Maine, you can [contact Pine Tree Legal Assistance](https://ptla.org/contact-us) If you or your legal problem are outside of the state of Maine, find [your local
+  legal aid provider](https://www.lsc.gov/what-legal-aid/find-legal-aid).
+
+  ${ display_template(PTLA_terms_of_use, scrollable=True, collapse=False) }
+
+fields:
+  # This points to a terms of use in this package which you can edit.
+  # If you prefer, you can link to a static website by deleting everything
+  # in the ${ } tags and replacing with a static website, like 
+  # https://example.com/tos
+  - To continue, you must accept our terms of use: acknowledged_information_use
+    datatype: checkboxes
+    none of the above: False    
+    minlength: 1
+    choices:
+      - I accept the terms of use.: I accept
+    validation messages:
+      minlength: |
+        You cannot continue unless you agree to the terms of use.        
+continue button field: al_intro_screen
 ---
 comment: |
   This question is used to introduce your interview. Please customize
